--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css" integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="nice-select.css">
+    
     <link rel="stylesheet" type="text/css" href="slick.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,19 +16,71 @@
 <div class="container">
 
 
-<div class="multiple-items">
+<!-- <div class="multiple-items"> -->
+    <div class="item"><img src="snorlax.png" alt=""></div>
+    <div class="item"><img src="snorlax.png" alt=""></div>
+    <div class="item"><img src="snorlax.png" alt=""></div>
+    <div data-aos="zoom-in" class="item"><img src="snorlax.png" alt=""></div>
     <div class="item"><img src="snorlax.png" alt=""></div>
     <div class="item"><img src="snorlax.png" alt=""></div>
     <div class="item"><img src="snorlax.png" alt=""></div>
     <div class="item"><img src="snorlax.png" alt=""></div>
     <div class="item"><img src="snorlax.png" alt=""></div>
     <div class="item"><img src="snorlax.png" alt=""></div>
-    <div class="item"><img src="snorlax.png" alt=""></div>
-    <div class="item"><img src="snorlax.png" alt=""></div>
-    <div class="item"><img src="snorlax.png" alt=""></div>
-    <div class="item"><img src="snorlax.png" alt=""></div>
-</div>
-</div>
+
+    <a data-fancybox="gallery" href="https://cdn2.unrealengine.com/skyrim-12th-anniversary-12-reasons-to-keep-playing-2-1920x1080-b5875ec35e26.jpg">
+        <img src="https://cdn2.unrealengine.com/skyrim-12th-anniversary-12-reasons-to-keep-playing-2-1920x1080-b5875ec35e26.jpg" alt="3">
+    </a>
+    <a data-fancybox="gallery" href="https://cdn2.unrealengine.com/skyrim-12th-anniversary-12-reasons-to-keep-playing-2-1920x1080-b5875ec35e26.jpg">
+        <img src="https://cdn2.unrealengine.com/skyrim-12th-anniversary-12-reasons-to-keep-playing-2-1920x1080-b5875ec35e26.jpg" alt="3">
+    </a>
+    <a data-fancybox="gallery" href="https://cdn2.unrealengine.com/skyrim-12th-anniversary-12-reasons-to-keep-playing-2-1920x1080-b5875ec35e26.jpg">
+        <img src="https://cdn2.unrealengine.com/skyrim-12th-anniversary-12-reasons-to-keep-playing-2-1920x1080-b5875ec35e26.jpg" alt="3">
+    </a>
+
+
+
+    <select>
+        <option value="1">ы</option>
+        <option value="1">ы</option>
+        <option value="1">ы</option>
+        <option value="1">ы</option>
+        <option value="1">ы</option>
+    </select>
+
+
+    <button data-micromodal-trigger="modal-1">rkbr</button>
+
+
+    <div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
+        <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+          <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+            <header class="modal__header">
+              <h2 class="modal__title" id="modal-1-title">
+                Micromodal
+              </h2>
+              <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+            </header>
+            <main class="modal__content" id="modal-1-content">
+              <p>
+                Try hitting the <code>tab</code> key and notice how the focus stays within the modal itself. Also, <code>esc</code> to close modal.
+              </p>
+            </main>
+            <footer class="modal__footer">
+              <button class="modal__btn modal__btn-primary">Continue</button>
+              <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
+            </footer>
+          </div>
+        </div>
+    </div>
+
+
+
+   
+
+          
+
+<!-- </div> -->
 
 
 
@@ -32,9 +88,13 @@
 
 
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" 
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js" integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="slick.min.js"></script>
+    <script src="jquery.nice-select.js"></script>
+    <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
     <script src="main.js"></script>
     <!-- jquery должен быть выше других скриптов -->
 </body>
